@@ -13,8 +13,6 @@
     <artifactId>graal-native-example</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <graal.feature>top.dreamlike.graal.PanamaFeature</graal.feature>
         <main.class>top.dreamlike.Main</main.class>
@@ -155,6 +153,7 @@
                     <target>${java.version}</target>
                     <source>${java.version}</source>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
+                    <enablePreview>true</enablePreview>
                     <annotationProcessors>
                         <annotationProcessor>
                             top.dreamlike.panama.generator.proxy.PanamaAnnotationProcessor
@@ -164,8 +163,8 @@
                         <compilerArg>-Aindy.enable=false</compilerArg>
                         <compilerArg>-Agenerate.graal.feature.enable=true</compilerArg>
                         <compilerArg>-Agenerate.graal.feature.name=${graal.feature}</compilerArg>
-                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
+
                 </configuration>
             </plugin>
             <plugin>
